updated admin settings page

--- a/CSS/admin css/admin_styles.css
+++ b/CSS/admin css/admin_styles.css
@@ -7803,6 +7803,11 @@ textarea.form-control-lg {
   padding-bottom: 3rem !important;
 }
 
+.py-6 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
 .pt-0 {
   padding-top: 0 !important;
 }
