--- a/CSS/admin css/admin_settings_css.css
+++ b/CSS/admin css/admin_settings_css.css
@@ -15,7 +15,7 @@ body {
   section {
     max-width: 600px;
     margin: 20px auto;
-    padding: 65px 65px;
+    padding: 85px 65px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 18px;
@@ -36,10 +36,21 @@ body {
     width: 100%;
     padding: 10px 10px;
     margin-bottom: 15px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    font-size: 16px;
+  }
+  /*need to fix this bug, (move the text up more)*/
+  .showpass {
+    width: 100%;
+    text-emphasis-color: #b10e0e;
+    padding: 0px 10px;
+    margin-bottom: 0px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 22px;
+    top: 0px;
   }
   button {
     background-color: #e41010;
@@ -55,6 +66,7 @@ body {
   }
   .button1{
     background-color: #e41010;
+    margin-top : 20px;
     color: #fdfdfd;
     padding: 10px 10px;
     border: none;
